--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -12,6 +12,11 @@
     padding: 0px;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 header {
     display: sticky;
     background-color: var(--color-dark);
@@ -154,8 +159,151 @@ input[type=submit]#submit {
 }
 
 input[type=submit]#submit:hover {
-    background: rgb(51, 153, 102);
+    background: var(--color-green);
 }
+
+.login {
+    display: flex;
+    flex-direction: column;
+    background: var(--color-dark-forms);
+    top: 50px;
+    float: center;
+    width: 500px;
+    height: 40vh;
+    margin: 10px auto;
+}
+
+.login .login-form {
+    flex: 3;
+    width: 100%;
+    background: var(--color-dark-forms);
+    height: 40vh;
+}
+
+.login h4 {
+    margin-top: 10px;
+    text-align: center;
+    color: var(--color-white);
+}
+
+.login input {
+    flex: 1;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px var(--color-green) solid;
+    background: none;
+    width: 80%;
+    height: 20px;
+    font-size: 1.2rem;
+    color: white;
+    margin: 20px 15px;
+}
+
+.login-form p a {
+    text-decoration: none;
+    font-size: 20px;
+    color: var(--color-white);
+    margin: 15px 10px;
+    font-size: 0.9em;
+}
+
+.login-form input[type=submit] {
+    width: 30vw;
+    border: none;
+    text-align: center;
+    border: 1px var(--color-green) solid;
+    background: inherit;
+    color: var(--color-white);
+    height: 50px;
+    cursor: pointer;
+}
+
+.login-form input[type=submit]:hover {
+    background: var(--color-green);
+    text-align: center;
+    left: 20%;
+}
+
+.img-icon {
+    font-size: 5rem;
+    background: gray;
+    border: 2px solid black;
+    border-radius: 50%;
+    padding: 0.8rem;
+    margin-left: 70%;
+}
+
+.fa-camera {
+    font-size: 2rem;
+}
+
+h3#userprof {
+    text-align: center;
+    margin: 0px 0px 5px 0px;
+    background: var(--color-dark);
+    color: var(--color-green);
+    padding: 5px;
+}
+
+.upload {
+    position: relative;
+    top: -5rem;
+    left: 27rem;
+    font-size: 2.7rem;
+}
+
+.profile-card {
+    width: 500px;
+    min-height: 700px;
+    height: 100%;
+    border: 1px solid var(--color-black);
+    border-radius: 0px 0px 10px 10px;
+    margin: 30px auto;
+    background: var(--color-white);
+}
+
+details.profileinfo {
+    border-radius: 4px;
+    padding: .5em .5em 0;
+    margin: 1em 10px;
+}
+
+details.profileinfo summary {
+    font-weight: bold;
+    margin: 1em -.5em 0;
+    padding: .5em;
+    width: inherit;
+    background-color: #ddd;
+    color: var(--color-green);
+    border: none;
+    box-shadow: 3px 3px 4px black;
+    cursor: pointer;
+}
+
+details.profileinfo [open] {
+    padding: .5em;
+}
+
+details.profileinfo>summary::-webkit-details-marker {
+    display: none;
+}
+
+details.profileinfo summary:after {
+    border-radius: 5px;
+    content: "+";
+    float: right;
+}
+
+details.profileinfo[open] summary::after {
+    margin-bottom: .5em;
+    content: "-";
+}
+
+details.profileinfo p {
+    margin: 10px;
+}
+
 
 @media only screen and (max-width: 600px) {
 
@@ -239,7 +387,7 @@ input[type=submit]#submit:hover {
         margin: 10px 5px;
     }
 
-    input[type=submit]#submit {
+    input[type=submit].submitbtn {
         flex: 1;
         border: none;
         text-align: center;
@@ -251,9 +399,137 @@ input[type=submit]#submit:hover {
         font-size: 10px;
     }
 
-    input[type=submit]#submit:hover {
-
-        background: var(--color-green);
+    .login {
+        display: flex;
+        flex-direction: column;
+        background: var(--color-dark-forms);
+        top: 50px;
+        float: center;
+        margin: 10px auto;
+        width: 100%;
+        height: 300px;
+        border: 1px solid var(--color-black);
+        font-size: 13px;
+        border-radius: 10px;
     }
 
+    .login .login-form {
+        flex: 3;
+        width: 100%;
+        background: var(--color-dark-forms);
+        height: 40vh;
+    }
+
+    .login h4 {
+        margin-top: 10px;
+        text-align: center;
+        color: var(--color-white);
+    }
+
+    .login input {
+        flex: 1;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: 1px var(--color-green) solid;
+        background: none;
+        width: 80%;
+        height: 20px;
+        font-size: 1.2rem;
+        color: white;
+        margin: 20px 15px;
+    }
+
+    .login-form p a {
+        text-decoration: none;
+        font-size: 20px;
+        color: var(--color-white);
+        margin: 15px 10px;
+        font-size: 0.9em;
+    }
+
+    .img-icon {
+        font-size: 3rem;
+        background: gray;
+        border: 2px solid black;
+        border-radius: 50%;
+        padding: 0.8rem;
+        margin-left: 70%;
+    }
+
+    .fa-camera {
+        font-size: 2rem;
+    }
+
+    .upload {
+        position: relative;
+        top: -5rem;
+        left: 27rem;
+        font-size: 2.7rem;
+    }
+
+
+    h3#userprof {
+        font-size: 1em;
+        text-align: center;
+        margin: 0px 0px 5px 0px;
+        background: var(--color-dark);
+        color: var(--color-green);
+        padding: 5px;
+    }
+
+    .upload {
+        position: relative;
+        top: -5rem;
+        left: 27rem;
+        font-size: 2.7rem;
+    }
+
+    .profile-card {
+        width: 20rem;
+        height: 100%;
+        border-radius: 10px;
+        margin: 20px auto;
+    }
+
+    details.profileinfo {
+        border-radius: 4px;
+        padding: .5em .5em 0;
+        margin: 1em 10px;
+    }
+
+    details.profileinfo summary {
+        font-weight: bold;
+        margin: 1em -.5em 0;
+        padding: .5em;
+        width: inherit;
+        background-color: #ddd;
+        color: var(--color-green);
+        border: none;
+        box-shadow: 3px 3px 4px black;
+        cursor: pointer;
+    }
+
+    details.profileinfo>summary::-webkit-details-marker {
+        display: none;
+    }
+
+    details.profileinfo summary:after {
+        border-radius: 5px;
+        content: "+";
+        float: right;
+    }
+
+    details.profileinfo[open] summary::after {
+        margin-bottom: .5em;
+        content: "-";
+    }
+
+    details.profileinfo p {
+        margin: 10px;
+    }
+
+    details.profileinfo [open] {
+        padding: .5em;
+    }
 }
