--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -22,6 +22,7 @@ header {
     background-color: var(--color-dark);
     width: 100%;
     max-width: 100%;
+    margin-bottom: 50px;
 }
 
 header nav {
@@ -90,10 +91,10 @@ footer {
     color: var(--color-light-grey);
     background-color: var(--color-dark);
     width: 100%;
-    margin-top: 70px;
-    margin-bottom: 0px;
-    line-height: 100px;
-    font-size: 1.2em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3rem;
 
 }
 
@@ -126,6 +127,12 @@ footer {
 .form-details form #form-info {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.form-details #prop-image {
+    border: none;
+    font-size: 15px;
+}
+
 
 form.signupform {
     background: var(--color-dark-forms);
