--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -126,6 +126,11 @@ button.edit-content {
     cursor: pointer;
 }
 
+button.delete-advert {
+    background-color: rgb(248, 6, 6);
+    border-bottom: 4px solid #3d0404;
+}
+
 .title h5 {
     font-size: 15px;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
