--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -454,6 +454,57 @@ section.spec-prop {
     font-weight: bold;
 }
 
+/* Dropdown Button */
+.dropbtn {
+    background-color: var(--color-dark);
+    color: var(--color-light-grey);
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+    font: 700 13px Helvetica, Arial;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    font: 700 13px Helvetica, Arial;
+    position: absolute;
+    background-color: var(--color-dark);
+    min-width: 160px;
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: var(--color-light-grey);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    color: var(--color-black);
+    background: #dadada;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    color: var(--color-black);
+    background: #dadada;
+}
+
 @media only screen and (max-width: 600px) {
     header nav {
         display: flex;
